Finalizando estilização do form

--- a/Estudo/index.css
+++ b/Estudo/index.css
@@ -11,5 +11,38 @@ main {
     justify-content: center;
     align-items: center;
     color: white;
+    width: 30rem;
+    /* background-color: yellow; */
 }
 
+main h1 {
+    font-size: 2.5rem;
+}
+
+form {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    gap: 0.30rem;
+    width: 100%;
+    /* background-color: red; */
+}
+
+form input {
+    background-color: rgb(68, 68, 68);
+    border: none;
+    outline: none;
+    padding: 0.80rem;
+    border-radius: 8px;
+    color: white;
+}
+
+form button {
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: white;
+    background-color: rgb(127, 35, 212);
+    padding: 0.90rem;
+}
