--- a/Estudo/index.css
+++ b/Estudo/index.css
@@ -17,11 +17,16 @@ main {
 
 main h1 {
     font-size: 2.5rem;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+main > * {
+    width: 300px;
 }
 
 form {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-content: center;
     gap: 0.30rem;
     width: 100%;
@@ -35,6 +40,7 @@ form input {
     padding: 0.80rem;
     border-radius: 8px;
     color: white;
+    flex-grow: 1;
 }
 
 form button {
@@ -45,4 +51,31 @@ form button {
     color: white;
     background-color: rgb(127, 35, 212);
     padding: 0.90rem;
+    transition: all 0.1s linear;
+}
+
+form button:hover {
+    background-color: rgb(143, 48, 231);
+}
+
+ul {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 0.30rem;
+}
+
+ul li {
+    list-style: none;
+    background-color: rgb(68, 68, 68);
+    display: block;
+    padding: 0.70rem;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.1s linear;
+    margin-left: 0;
+}
+
+ul li:hover {
+    background-color: rgb(82, 82, 82);
 }
