--- a/Estudo/index.css
+++ b/Estudo/index.css
@@ -65,7 +65,7 @@ ul {
     gap: 0.30rem;
 }
 
-ul li {
+.guest {
     list-style: none;
     background-color: rgb(68, 68, 68);
     display: block;
@@ -76,7 +76,7 @@ ul li {
     margin-left: 0;
 }
 
-ul li:hover {
+.guest:hover {
     background-color: rgb(82, 82, 82);
 }
 
