--- a/Estudo/index.css
+++ b/Estudo/index.css
@@ -60,20 +60,20 @@ form button:hover {
 
 ul {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     flex-direction: column;
     gap: 0.30rem;
+    height: 150px;
+    overflow-y: scroll;
 }
 
 .guest {
     list-style: none;
     background-color: rgb(68, 68, 68);
-    display: block;
     padding: 0.70rem;
     border-radius: 8px;
     cursor: pointer;
     transition: all 0.1s linear;
-    margin-left: 0;
 }
 
 .guest:hover {
