--- a/Projetos/Pasta 2 - Lista de Compras/styles/global.css
+++ b/Projetos/Pasta 2 - Lista de Compras/styles/global.css
@@ -17,4 +17,11 @@
     /* Border */
     --border-primary: #D1D5DB;
     --border-hover: #B9C2D0;
+
+    /* Tipografia */
+    /* Inter */
+    --title: 1.5em 2em
+    --label: 1em 1.25em
+    --paragraph: 1em 1.25em
+    --link: 0.875em 1em
 }
