style: Colocando estilização para elementos globais

--- a/Projetos/Pasta 2 - Lista de Compras/styles/global.css
+++ b/Projetos/Pasta 2 - Lista de Compras/styles/global.css
@@ -25,3 +25,13 @@
     --paragraph: 1em 1.25em
     --link: 0.875em 1em
 }
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body  {
+    background-color: var(--background-primary);
+}
