style: Estilizando o cabeçalho do hero

--- a/Projetos/Pasta 2 - Lista de Compras/styles/global.css
+++ b/Projetos/Pasta 2 - Lista de Compras/styles/global.css
@@ -19,11 +19,13 @@
     --border-hover: #B9C2D0;
 
     /* Tipografia */
+    --font-Inter: "Inter", sans-serif;
+
     /* Inter */
-    --title: 1.5em 2em
-    --label: 1em 1.25em
-    --paragraph: 1em 1.25em
-    --link: 0.875em 1em
+    --title: 1.5em 2em var(--font-Inter);
+    --label: 1em 1.25em var(--font-Inter);
+    --paragraph: 1em 1.25em var(--font-Inter);
+    --link: 0.875em 1em var(--font-Inter);
 }
 
 * {
