style: Mudando o tamanho da caixa da lista

--- a/Projetos/Pasta 2 - Lista de Compras/styles/purchases.css
+++ b/Projetos/Pasta 2 - Lista de Compras/styles/purchases.css
@@ -1,6 +1,6 @@
 #listPurchases div {
     background-color: var(--background-secondary);
-    padding: 1em;
+    padding: 1.3em 0.90em;
     border-radius: 8px;
     gap: 0.80em;
     align-items: center;
