chore: Criando classe para o javascript

--- a/Projetos/Pasta 2 - Lista de Compras/styles/purchases.css
+++ b/Projetos/Pasta 2 - Lista de Compras/styles/purchases.css
@@ -20,7 +20,20 @@
 
 #listPurchases div > span {
     background-image: url(../img/check-box-default.png);
-    width: 1em;
+    width: 1.1em;
+    height: 1em;
+}
+
+
+#listPurchases div > span:hover {
+    background-image: url(../img/check-box-hover.png);
+    width: 1.1em;
+    height: 1em;
+}
+
+.active-checkbox {
+    background-image: url(../img/check-box-selected.png);
+    width: 1.1em;
     height: 1em;
 }
 
