--- a/Projetos/Pasta 2 - Lista de Compras/styles/global.css
+++ b/Projetos/Pasta 2 - Lista de Compras/styles/global.css
@@ -47,3 +47,11 @@ h1 {
 li {
     list-style: none;
 }
+
+/* Responsividade */
+@media screen and (min-width: 35.94em) {
+    .container {
+        max-width: 40em;
+        margin-inline: auto;
+    }
+}
