style: Deixando o form em linha com telas maiores

--- a/Projetos/Pasta 2 - Lista de Compras/styles/global.css
+++ b/Projetos/Pasta 2 - Lista de Compras/styles/global.css
@@ -54,4 +54,12 @@ li {
         max-width: 40em;
         margin-inline: auto;
     }
+
+    #input {
+        flex-direction: row;
+    }
+
+    #input input {
+        flex-grow: 1;
+    }
 }
