--- a/Projetos/Pasta 2 - Lista de Compras/styles/purchases.css
+++ b/Projetos/Pasta 2 - Lista de Compras/styles/purchases.css
@@ -1,3 +1,8 @@
+#listPurchases {
+    max-height: 20em;
+    overflow-y: auto;
+}
+
 #listPurchases div {
     background-color: var(--background-secondary);
     padding: 1.3em 0.90em;
