feat: Fazendo validação do campo do input

--- a/Projetos/Pasta 2 - Lista de Compras/styles/purchases.css
+++ b/Projetos/Pasta 2 - Lista de Compras/styles/purchases.css
@@ -17,6 +17,10 @@
     border: 2px solid var(--border-hover);
 }
 
+.border-click {
+    background-color: red;
+}
+
 #listPurchases div > p {
     flex-grow: 1;
     font: var(--paragraph);
