chore: Descomentando linha

--- a/Projetos/Pasta 2 - Lista de Compras/styles/purchases.css
+++ b/Projetos/Pasta 2 - Lista de Compras/styles/purchases.css
@@ -42,11 +42,11 @@
     height: 1em;
 }
 
-/* #listPurchases div > span:hover {
+#listPurchases div > span:hover {
     background-image: url(../img/check-box-hover.png);
     width: 1.1em;
     height: 1em;
-} */
+}
 
 #listPurchases div > img {
     width: 1em;
