style: colocando um contador no site

--- a/Projetos/Pasta 2 - Lista de Compras/styles/purchases.css
+++ b/Projetos/Pasta 2 - Lista de Compras/styles/purchases.css
@@ -3,7 +3,7 @@
     overflow-y: auto;
 }
 
-#listPurchases div {
+#listPurchases li div {
     background-color: var(--background-secondary);
     padding: 1.3em 0.90em;
     border-radius: 8px;
