--- a/Estudo/index.css
+++ b/Estudo/index.css
@@ -21,6 +21,12 @@ label {
     gap: 0.50em;
 }
 
+input {
+    padding: 0.40em;
+    border-radius: 8px;
+    border: 1px solid black;
+}
+
 button {
     color: white;
     border: none;
